# rkm

./: .coveralls.yml  .travis.yml  Cargo.toml  LICENSE.md  README.md
rkm/: Cargo.toml  README.md
rkm/examples/: example.rs
rkm/src/: bench.rs  common.rs  example.rs  lib.rs  parallel.rs  serial.rs
rkm/tests/: test.rs
src/: bench.rs  example.rs  lib.rs
