[package]
name = "rkm"
version = "0.3.0"
authors = ["Nick Sarten <gen.battle@gmail.com>"]
description = "A generic k-means implementation"
repository = "https://github.com/genbattle/rkm"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["kmeans", "k", "means", "cluster", "clustering"]
categories = ["algorithms", "science"]

[dependencies]
csv = "0.15.0"
rand = "0.4.2"
num = "0.1.42"
ndarray = "0.9.1"

[lib]
name = "rkm"
path = "src/lib.rs"

[[bin]]
name = "rkm_example"
path = "src/example.rs"

